--- a/Organizze/app/src/main/res/values/themes.xml
+++ b/Organizze/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Organizze" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.Organizze" parent="Theme.AppCompat.Light">
+        <item name="colorPrimary">#01C7D2</item>
+        <item name="colorPrimaryDark">#00B2BC</item>
+        <item name="colorAccent">#FF706A</item>
     </style>
 
     <style name="Theme.Organizze" parent="Base.Theme.Organizze" />
