--- a/Organizze/app/src/main/res/layout/activity_login.xml
+++ b/Organizze/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:background="#01C7D2"
+        android:background="@color/colorPrimary"
         android:text="Login"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
