Organizze - Criando e adicionando Theme para activity receitas e despesas

--- a/Organizze/app/src/main/res/values/themes.xml
+++ b/Organizze/app/src/main/res/values/themes.xml
@@ -6,5 +6,22 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- Theme página despesas   -->
+    <style name="despesaTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">@color/colorPrimaryDespesa</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkDespesa</item>
+        <item name="colorAccent">@color/colorAccentDespesa</item>
+    </style>
+
+    <style name="receitaTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">@color/colorPrimaryReceita</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkReceita</item>
+        <item name="colorAccent">@color/colorAccentReceita</item>
+    </style>
+    
     <style name="Theme.Organizze" parent="Base.Theme.Organizze" />
 </resources>
