--- a/Organizze/app/src/main/res/layout/activity_despesas.xml
+++ b/Organizze/app/src/main/res/layout/activity_despesas.xml
@@ -95,6 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:onClick="salvarDespesa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
