Organizze - Criando RecyclerView para movimentações

--- a/Organizze/app/src/main/res/layout/content_principal.xml
+++ b/Organizze/app/src/main/res/layout/content_principal.xml
@@ -66,6 +66,7 @@
             app:mcv_showOtherDates="all" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
