--- a/WhatsApp/app/src/main/res/values/colors.xml
+++ b/WhatsApp/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#086B62</color>
+    <color name="colorPrimaryDark">#065952</color>
+    <color name="colorAccent">#1C9E67</color>
 </resources>
