--- a/WhatsApp/app/src/main/res/layout/activity_main.xml
+++ b/WhatsApp/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Digite seu e-mail" />
+            android:hint="@string/hint_input_email"
+            android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -56,7 +57,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Digite sua senha" />
+            android:hint="@string/hint_input_password"
+            android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -66,7 +68,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:background="@color/colorPrimaryDark"
-        android:text="Logar"
+        android:text="@string/button_login"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/textCadastrar"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:onClick="textCadastrar"
-        android:text="Não tem conta? Cadastre-se"
+        android:text="@string/nao_tem_conta"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
