WhatsApp - Configurando itens de menu

--- a/WhatsApp/app/src/main/res/values/themes.xml
+++ b/WhatsApp/app/src/main/res/values/themes.xml
@@ -6,5 +6,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="Toolbar" parent="Theme.AppCompat.NoActionBar">
+
+    </style>
+
     <style name="Theme.WhatsApp" parent="Base.Theme.WhatsApp" />
 </resources>
