WhatsApp - Recuperando nome e foto de perfil do usuário

--- a/WhatsApp/app/src/main/res/layout/activity_configuracoes.xml
+++ b/WhatsApp/app/src/main/res/layout/activity_configuracoes.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toBottomOf="@+id/include" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/editPerfilNome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -48,7 +48,7 @@
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+        app:layout_constraintTop_toBottomOf="@+id/editPerfilNome" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/buttonSalvarImagem"
