--- a/WhatsApp/app/src/main/res/layout/activity_chat.xml
+++ b/WhatsApp/app/src/main/res/layout/activity_chat.xml
@@ -19,19 +19,20 @@
             android:theme="@style/Toolbar">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/circleImageFoto"
+                android:id="@+id/circleImageFotoChat"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:src="@drawable/padrao"
                 android:layout_marginRight="16dp"/>
 
             <TextView
+                android:id="@+id/textViewNomeChat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Gabriel Tangerina"
-                android:textStyle="bold"
+                android:textColor="@color/white"
                 android:textSize="18sp"
-                android:textColor="@color/white"/>
+                android:textStyle="bold" />
 
         </com.google.android.material.appbar.MaterialToolbar>
 
