WhatsApp - Mudando forma de salvar. Agora a mesma mensagem é salva para os dois usuários

--- a/WhatsApp/app/src/main/res/layout/content_chat.xml
+++ b/WhatsApp/app/src/main/res/layout/content_chat.xml
@@ -12,6 +12,7 @@
         android:id="@+id/recyclerMensagens"
         android:layout_width="409dp"
         android:layout_height="0dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintBottom_toTopOf="@+id/fabEnviar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
