--- a/WhatsApp/app/src/main/res/layout/activity_chat.xml
+++ b/WhatsApp/app/src/main/res/layout/activity_chat.xml
@@ -45,10 +45,11 @@
 
     <include
         layout="@layout/content_chat"
-        android:layout_height="659dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+        app:layout_constraintTop_toTopOf="@+id/appBarLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout >
