--- a/WhatsApp/app/src/main/res/layout/adapter_mensagem_destinatario.xml
+++ b/WhatsApp/app/src/main/res/layout/adapter_mensagem_destinatario.xml
@@ -7,11 +7,14 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="6dp"
         android:background="@drawable/bg_balao_mensagem"
         android:backgroundTint="@color/balaoDestinatario"
-        android:layout_margin="6dp"
-        android:layout_alignParentLeft="true">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageMensagemFoto"
