WhatsApp - Terminando funcionalidade add e remover usuario ao criar grupo e criando toolbar de grupo

--- a/WhatsApp/app/src/main/res/layout/activity_grupo.xml
+++ b/WhatsApp/app/src/main/res/layout/activity_grupo.xml
@@ -27,12 +27,15 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerMembrosSelecionados"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:scrollbars="horizontal"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerMembros"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"/>
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
