--- a/WhatsApp/app/src/main/res/layout/adapter_contato_selecionado.xml
+++ b/WhatsApp/app/src/main/res/layout/adapter_contato_selecionado.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical"
         android:padding="5dp">
 
@@ -15,13 +16,15 @@
             android:id="@+id/imageViewFotoMembroSelecionado"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_gravity="center"
             android:src="@drawable/padrao" />
 
         <TextView
             android:id="@+id/textNomeMembroSelecionado"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:maxWidth="90dp"
             android:text="Nome"
             android:textStyle="bold" />
 
