WhatsApp - Mudando layout da imagem nas conversas

--- a/WhatsApp/app/src/main/res/layout/content_chat.xml
+++ b/WhatsApp/app/src/main/res/layout/content_chat.xml
@@ -39,7 +39,7 @@
             android:inputType="text"
             android:paddingLeft="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton"
+            app:layout_constraintEnd_toStartOf="@+id/imageGaleria"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,7 +57,7 @@
             app:srcCompat="@drawable/ic_camera_cinza" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/imageGaleria"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="8dp"
