--- a/WhatsApp/app/src/main/res/layout/adapter_mensagem_destinatario.xml
+++ b/WhatsApp/app/src/main/res/layout/adapter_mensagem_destinatario.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:maxHeight="400dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -26,8 +27,9 @@
 
         <ImageView
             android:id="@+id/imageMensagemFoto"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:src="@drawable/padrao" />
 
         <TextView
@@ -39,4 +41,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
