OrderExpress - Primeiros passos para criacao da funcionalidade de criar produtos

--- a/OrderExpressApp/app/src/main/res/layout/activity_main.xml
+++ b/OrderExpressApp/app/src/main/res/layout/activity_main.xml
@@ -59,13 +59,28 @@
     <Button
         android:id="@+id/btnFazerPedido"
         android:layout_width="0dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/cor_logo_preta"
+        android:drawableTop="@drawable/ic_fazer_pedido"
+        android:text="Fazer Pedido"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnMeusProdutos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnMeusProdutos"
+        android:layout_width="0dp"
         android:layout_height="115dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/cor_logo_preta"
-        android:drawableTop="@drawable/ic_fazer_pedido"
-        android:text="Fazer Pedido"
+        android:drawableTop="@drawable/ic_produtos"
+        android:text="Meus Produtos"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
