OrderExpress - configurando recyclerview e pesquisa de produtos

--- a/OrderExpressApp/app/src/main/res/layout/activity_meus_produtos.xml
+++ b/OrderExpressApp/app/src/main/res/layout/activity_meus_produtos.xml
@@ -24,4 +24,15 @@
         app:layout_constraintTop_toBottomOf="@+id/include6"
         app:layout_constraintVertical_bias="0.0" />
 
+    <ProgressBar
+        android:id="@+id/progressBarMeusProdutos"
+        style="?android:attr/progressBarStyle"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/recyclerProdutos"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include6" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
